--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Limvex Software Group - Desenvolvimento Web &amp;amp;amp; Mobile de Excelência</title>
+    <title>Limvex Software Group</title>
     <meta name="description" content="Software house especializada em desenvolvimento web, mobile e blockchain. Times sênior, prazos cumpridos, software que gera resultado. Solicite um orçamento.">
     <meta name="author" content="Linvex Software Group" />
     <link rel="canonical" href="https://linvex.com.br" />
@@ -52,8 +52,8 @@
   
   
   
-  <meta property="og:title" content="Limvex Software Group - Desenvolvimento Web &amp;amp;amp; Mobile de Excelência">
-  <meta name="twitter:title" content="Limvex Software Group - Desenvolvimento Web &amp;amp;amp; Mobile de Excelência">
+  <meta property="og:title" content="Limvex Software Group">
+  <meta name="twitter:title" content="Limvex Software Group">
   <meta property="og:description" content="Software house especializada em desenvolvimento web, mobile e blockchain. Times sênior, prazos cumpridos, software que gera resultado. Solicite um orçamento.">
   <meta name="twitter:description" content="Software house especializada em desenvolvimento web, mobile e blockchain. Times sênior, prazos cumpridos, software que gera resultado. Solicite um orçamento.">
 </head>
