refactor: footer and about archives: fontfamily

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Limvex Software Group</title>
-    <meta name="description" content="Software house especializada em desenvolvimento web, mobile e blockchain. Times sênior, prazos cumpridos, software que gera resultado. Solicite um orçamento.">
+    <meta name="description" content="Software house especializada em desenvolvimento web, mobile e automação com IA. Times sênior, prazos cumpridos, software que gera resultado. Solicite um orçamento.">
     <meta name="author" content="Linvex Software Group" />
     <link rel="canonical" href="https://linvex.com.br" />
 
@@ -26,7 +26,7 @@
       "@context": "https://schema.org",
       "@type": "Organization",
       "name": "Linvex Software Group",
-      "description": "Software house especializada em desenvolvimento web, mobile e blockchain",
+      "description": "Software house especializada em desenvolvimento web, mobile e automação com IA",
       "url": "https://linvex.com.br",
       "logo": "https://linvex.com.br/logo.png",
       "address": {
@@ -54,8 +54,8 @@
   
   <meta property="og:title" content="Limvex Software Group">
   <meta name="twitter:title" content="Limvex Software Group">
-  <meta property="og:description" content="Software house especializada em desenvolvimento web, mobile e blockchain. Times sênior, prazos cumpridos, software que gera resultado. Solicite um orçamento.">
-  <meta name="twitter:description" content="Software house especializada em desenvolvimento web, mobile e blockchain. Times sênior, prazos cumpridos, software que gera resultado. Solicite um orçamento.">
+  <meta property="og:description" content="Software house especializada em desenvolvimento web, mobile e automação com IA. Times sênior, prazos cumpridos, software que gera resultado. Solicite um orçamento.">
+  <meta name="twitter:description" content="Software house especializada em desenvolvimento web, mobile e automação com IA. Times sênior, prazos cumpridos, software que gera resultado. Solicite um orçamento.">
 </head>
 
   <body>
