feat: adiciona rebuild completo da landing page LIMVEX

--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Limvex - Excelência em Desenvolvimento de Software Sob Medida</title>
-    <meta name="description" content="Limvex: Software sob medida, aceleração de negócios e produtos white-label. Para empresas, novos negócios e soluções prontas. Excelência em desenvolvimento.">
-    <meta name="keywords" content="desenvolvimento de software, software sob medida, white-label, MVP, desenvolvimento web, software house, Limvex">
-    <meta name="author" content="Limvex Software Group" />
+    <title>LIMVEX - Transformamos tecnologia em crescimento real</title>
+    <meta name="description" content="SaaS e soluções sob medida com foco em resultado, prazo e previsibilidade. Para empresas que querem escalar com tecnologia.">
+    <meta name="keywords" content="desenvolvimento de software, software sob medida, SaaS, desenvolvimento web, software house, LIMVEX, tecnologia, escalar negócio">
+    <meta name="author" content="LIMVEX" />
     <link rel="canonical" href="https://limvex.com.br" />
     <meta name="robots" content="index, follow" />
 
@@ -54,10 +54,10 @@
 
 
 
-  <meta property="og:title" content="Limvex - Excelência em Desenvolvimento de Software Sob Medida">
-  <meta name="twitter:title" content="Limvex - Excelência em Desenvolvimento de Software Sob Medida">
-  <meta property="og:description" content="Limvex: Software sob medida, aceleração de negócios e produtos white-label. Para empresas, novos negócios e soluções prontas. Excelência em desenvolvimento.">
-  <meta name="twitter:description" content="Limvex: Software sob medida, aceleração de negócios e produtos white-label. Para empresas, novos negócios e soluções prontas. Excelência em desenvolvimento.">
+  <meta property="og:title" content="LIMVEX - Transformamos tecnologia em crescimento real">
+  <meta name="twitter:title" content="LIMVEX - Transformamos tecnologia em crescimento real">
+  <meta property="og:description" content="SaaS e soluções sob medida com foco em resultado, prazo e previsibilidade. Para empresas que querem escalar com tecnologia.">
+  <meta name="twitter:description" content="SaaS e soluções sob medida com foco em resultado, prazo e previsibilidade. Para empresas que querem escalar com tecnologia.">
   <meta property="og:url" content="https://limvex.com.br" />
 </head>
 
