feat: favicon and title

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>LIMVEX - Transformamos tecnologia em crescimento real</title>
+    <title>Limvex | Soluções em Tecnologia</title>
     <meta name="description" content="SaaS e soluções sob medida com foco em resultado, prazo e previsibilidade. Para empresas que querem escalar com tecnologia.">
     <meta name="keywords" content="desenvolvimento de software, software sob medida, SaaS, desenvolvimento web, software house, LIMVEX, tecnologia, escalar negócio">
     <meta name="author" content="LIMVEX" />
@@ -49,13 +49,15 @@
 
 
 
-  <link rel="icon" type="image/x-icon" href="https://storage.googleapis.com/gpt-engineer-file-uploads/AZyuYEw70vaeusKTh5wNOJtDQbs2/uploads/1760825302163-linvex-icon-bg.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="/favicon.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/favicon.png">
+  <link rel="apple-touch-icon" href="/favicon.png">
 
 
 
 
-  <meta property="og:title" content="LIMVEX - Transformamos tecnologia em crescimento real">
-  <meta name="twitter:title" content="LIMVEX - Transformamos tecnologia em crescimento real">
+  <meta property="og:title" content="Limvex | Soluções em Tecnologia">
+  <meta name="twitter:title" content="Limvex | Soluções em Tecnologia">
   <meta property="og:description" content="SaaS e soluções sob medida com foco em resultado, prazo e previsibilidade. Para empresas que querem escalar com tecnologia.">
   <meta name="twitter:description" content="SaaS e soluções sob medida com foco em resultado, prazo e previsibilidade. Para empresas que querem escalar com tecnologia.">
   <meta property="og:url" content="https://limvex.com.br" />
