feat: adiciona Meta Pixel, remove Lovable e atualiza branding
- Adiciona Facebook Pixel para tracking de conversões
- Remove dependência lovable-tagger (17 pacotes)
- Atualiza Open Graph para usar logo Limvex
- Corrige domínio de limvex.com.br para limvex.com
- Atualiza email de contato para limvextec@gmail.com
- Corrige backgrounds nas páginas de soluções (opacity 30%)
- Adiciona seção Stack e Infraestrutura na página Custom
- Atualiza JSON-LD Schema com dados corretos

--- a/index.html
+++ b/index.html
@@ -7,20 +7,16 @@
     <meta name="description" content="SaaS e soluções sob medida com foco em resultado, prazo e previsibilidade. Para empresas que querem escalar com tecnologia.">
     <meta name="keywords" content="desenvolvimento de software, software sob medida, SaaS, desenvolvimento web, software house, LIMVEX, tecnologia, escalar negócio">
     <meta name="author" content="LIMVEX" />
-    <link rel="canonical" href="https://limvex.com.br" />
+    <link rel="canonical" href="https://limvex.com" />
     <meta name="robots" content="index, follow" />
 
     <!-- Open Graph -->
-
-
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:image" content="https://limvex.com/limvex-og.png" />
 
     <!-- Twitter Card -->
     <meta name="twitter:card" content="summary_large_image" />
-
-
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta name="twitter:image" content="https://limvex.com/limvex-og.png" />
 
     <!-- JSON-LD Schema -->
     <script type="application/ld+json">
@@ -29,8 +25,8 @@
       "@type": "Organization",
       "name": "Linvex Software Group",
       "description": "Software house especializada em desenvolvimento web, mobile e automação com IA",
-      "url": "https://linvex.com.br",
-      "logo": "https://linvex.com.br/logo.png",
+      "url": "https://limvex.com",
+      "logo": "https://limvex.com/limvex-og.png",
       "address": {
         "@type": "PostalAddress",
         "addressLocality": "São Paulo",
@@ -41,7 +37,7 @@
         "@type": "ContactPoint",
         "telephone": "+55-11-99999-9999",
         "contactType": "sales",
-        "email": "contato@linvex.com.br"
+        "email": "limvextec@gmail.com"
       }
     }
     </script>
@@ -72,7 +68,7 @@
   <meta name="twitter:title" content="Limvex | Soluções em Tecnologia">
   <meta property="og:description" content="SaaS e soluções sob medida com foco em resultado, prazo e previsibilidade. Para empresas que querem escalar com tecnologia.">
   <meta name="twitter:description" content="SaaS e soluções sob medida com foco em resultado, prazo e previsibilidade. Para empresas que querem escalar com tecnologia.">
-  <meta property="og:url" content="https://limvex.com.br" />
+  <meta property="og:url" content="https://limvex.com" />
 </head>
 
   <body>
